<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_main_title">My Nanodegree Apps!</string>
    <string name="button_spotifystreamer_title">Spotify Streamer</string>
    <string name="button_spotifystreamer_toast">This button will launch my Spotify Streamer app!</string>
    <string name="button_scores_title">Scores App</string>
    <string name="button_scores_toast">This button will launch my Scores app!</string>
    <string name="button_library_title">Library App</string>
    <string name="button_library_toast">This button will launch my Library app!</string>
    <string name="button_buildbigger_title">Build It Bigger</string>
    <string name="button_buildbigger_toast">This button will launch my Build It Bigger app!</string>
    <string name="button_xyzreader_title">XYZ Reader</string>
    <string name="button_xyzreader_toast">This button will launch my XYZ Reader app!</string>
    <string name="button_capstone_title">Capstone: My Own App</string>
    <string name="button_capstone_toast">This button will launch my own Capstone app!</string>
</resources>
